Fix test step in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,21 @@ jobs:
           yarn type-check
       - name: test
         run: |
+          # Create .env.local for each package
+          cd packages/front-end/
           cp .env.example .env.local
+          cd ../back-end/
+          cp .env.example .env.local
+          cd ../../
+
+          # Run the test suite
           yarn test
+
+          # Cleanup
+          cd packages/front-end
+          rm .env.local
+          rm -rf coverage
+          cd ../back-end
           rm .env.local
           rm -rf coverage
 
@@ -49,7 +62,6 @@ jobs:
           FILE_CHANGES=$(git diff --name-only HEAD^ HEAD)
           YARN_LOCK_CHANGES=$(echo "$FILE_CHANGES" | grep yarn.lock)
           BACK_END_CHANGES=$(echo "$FILE_CHANGES" | grep packages/back-end)
-          
           HAS_BACKEND_CHANGES=$(if [ -z "${BACK_END_CHANGES}${YARN_LOCK_CHANGES}" ]; then echo "false"; else echo "true"; fi)
           echo "::set-output name=backend::${HAS_BACKEND_CHANGES}"
 
