--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -55,13 +55,14 @@
   "devDependencies": {
     "@types/async": "^3.0.2",
     "@types/body-parser": "^1.17.1",
-    "@types/concurrently": "^4.1.0",
+    "@types/chai": "^4.2.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/crypto-js": "^3.1.47",
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.17.1",
     "@types/express-jwt": "^0.0.42",
+    "@types/jest": "^24.0.23",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.157",
     "@types/md5": "^2.2.0",
@@ -79,7 +80,11 @@
     "@types/uniqid": "^5.2.0",
     "mongodb": "^3.6.3",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "chai": "^4.2.0",
+    "jest": "^26.6.3",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.5.6"
   },
   "license": "MIT"
 }
