--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -30,7 +30,7 @@
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
-    "express-jwt": "^5.3.3",
+    "express-jwt": "^6.0.0",
     "express-validator": "^6.2.0",
     "googleapis": "^59.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -44,12 +44,12 @@
     "nodemailer": "^6.6.0",
     "nunjucks": "^3.2.3",
     "objects-to-csv": "^1.3.6",
-    "pg": "^8.3.0",
+    "pg": "^8.6.0",
     "pino-http": "^5.3.0",
-    "snowflake-promise": "^4.1.0",
-    "sql-formatter": "^2.3.3",
+    "snowflake-promise": "^4.5.0",
+    "sql-formatter": "^4.0.2",
     "stripe": "^8.106.0",
-    "uniqid": "^5.2.0",
+    "uniqid": "^5.3.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -78,13 +78,13 @@
     "@types/sql-formatter": "^2.3.0",
     "@types/supertest": "^2.0.9",
     "@types/uniqid": "^5.2.0",
-    "mongodb": "^3.6.3",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.4",
     "chai": "^4.2.0",
     "jest": "^26.6.3",
+    "mongodb": "^3.6.3",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.5.6"
+    "ts-jest": "^26.5.6",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4"
   },
   "license": "MIT"
 }
