--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.5.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.15.0",
+    "dirty-json": "^0.9.2",
     "lodash": "^4.17.15",
     "markdown-it": "^11.0.0",
     "markdown-it-sanitizer": "^0.4.3",
