--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -19,6 +19,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.15.0",
     "dirty-json": "^0.9.2",
+    "json-stringify-pretty-compact": "^3.0.0",
     "lodash": "^4.17.15",
     "markdown-it": "^11.0.0",
     "markdown-it-sanitizer": "^0.4.3",
