Fix sql-formatter import (stop using default import). Add tsx files to pre-commit hook.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "./**/*.{json,css,scss,md}": [
       "prettier --write"
     ],
-    "./**/*.{js,ts}": [
+    "./**/*.{js,ts,jsx,tsx}": [
       "yarn lint"
     ]
   },
