--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint './**/*.{ts,tsx,js,jsx}' --fix --max-warnings 0",
-    "pretty": "prettier --write ./**/*.{json,css,scss,md}",
+    "pretty": "prettier --write ./**/*.{json,css,scss,md,mdx}",
     "type-check": "wsrun type-check",
     "test": "wsrun test",
     "dev": "wsrun dev",
