--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.9.0",
     "@jukben/emoji-search": "^2.0.1",
+    "@visx/stats": "^1.7.0",
+    "@visx/visx": "^1.10.0",
     "@webscopeio/react-textarea-autocomplete": "^4.7.3",
     "back-end": "0.0.1",
     "bootstrap": "^4.5.0",
