--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -16,11 +16,11 @@
   "dependencies": {
     "@google-cloud/bigquery": "^5.5.0",
     "@slack/web-api": "^5.14.0",
-    "ab-designer": "^0.4.0",
     "asn1.js": "^5.4.1",
     "async": "^3.1.0",
     "aws-sdk": "^2.696.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -56,6 +56,7 @@
     "@types/async": "^3.0.2",
     "@types/body-parser": "^1.17.1",
     "@types/chai": "^4.2.3",
+    "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/crypto-js": "^3.1.47",
