--- a/packages/back-end/.env.example
+++ b/packages/back-end/.env.example
@@ -1,29 +1,14 @@
-###################################
-######## Required Settings ########
-###################################
-
 # Auth signing key (use a long random string)
-JWT_SECRET=
+JWT_SECRET=dev
 
 # Data source credential encryption key (use a long random string)
-ENCRYPTION_KEY=
-
-# S3 (screenshot/file uploads)
-S3_BUCKET=
-S3_REGION=us-east-1
+ENCRYPTION_KEY=dev
 
 # CORS configuration
 APP_ORIGIN=http://localhost:3000
 
 # MongoDB
 MONGODB_URI=mongodb://root:password@localhost:27017/
-
-###################################
-######## Optional Settings ########
-###################################
-
-# Override the default S3 domain (https://${S3_BUCKET}.s3.amazonaws.com/)
-S3_DOMAIN=
 
 # Required to send emails from the app
 EMAIL_ENABLED=true
