--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "echo 'no tests for front-end yet'",
-    "type-check": "tsc --pretty --noEmit",
-    "init:dev": "cp -n .env.example .env.local"
+    "type-check": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.9.0",
