--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -17,9 +17,14 @@
     "next": "^10.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "rehype-add-classes": "^1.0.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.55"
+    "@tailwindcss/typography": "^0.4.1",
+    "@types/react": "^16.9.55",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.2"
   }
 }
