Simplify Dev Setup (#12)
- Remove S3 dependency (store files in local filesystem instead)
- Make .env.local files optional (and remove yarn init:dev step)
- Simplify README and focus on just getting Growth Book running on dev
- Redesign docs to use Tailwind CSS instead of Bootstrap
- Remove noisy console.logs in back-end on dev
- Switch telemetry to use Jitsu instead of Plausible

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -7,9 +7,7 @@
     "dev": "next dev -p 3200",
     "build": "next build",
     "start": "next start -p 3200",
-    "test": "echo 'no tests for docs yet'",
-    "type-check": "tsc --pretty --noEmit",
-    "init:dev": "touch next.config.js"
+    "type-check": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
@@ -19,9 +17,14 @@
     "next": "^10.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "rehype-add-classes": "^1.0.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.55"
+    "@tailwindcss/typography": "^0.4.1",
+    "@types/react": "^16.9.55",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.2"
   }
 }
