--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "pretty": "prettier --write ./**/*.{json,css,scss,md,mdx}",
     "type-check": "wsrun -m type-check",
     "test": "wsrun -m test",
-    "dev": "wsrun -m dev",
+    "dev": "wsrun -p '*-end' -m dev",
+    "dev:docs": "yarn workspace docs dev",
     "build": "wsrun -m build",
     "build:back": "yarn workspace back-end build",
     "build:front": "yarn workspace front-end build",
