--- a/packages/front-end/.env.example
+++ b/packages/front-end/.env.example
@@ -1,1 +1,5 @@
 API_HOST=http://localhost:3100
+
+# We collect anonymous telemetry data to help improve Growth Book
+# Setting the below to "true" disables this behavior
+DISABLE_TELEMETRY=true
