--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,41 @@ name: CI
 on: [push]
 
 jobs:
-  ci:
+  changes:
     runs-on: ubuntu-latest
+    outputs:
+      any: ${{ steps.changes.outputs.any }}
+      app: ${{ steps.changes.outputs.app }}
+      backend: ${{ steps.changes.outputs.backend }}
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 2
+
+      - name: check for file changes
+        id: changes
+        run: |
+          # List of all changes in this push
+          FILE_CHANGES=$(git diff --name-only HEAD^ HEAD)
+
+          # See if any changes were made to any of the packages)
+          HAS_ANY_CHANGES=$(echo "$FILE_CHANGES" | grep -qP 'ci.yml|yarn.lock|package.json|Dockerfile|back-end|front-end|docs' && echo "true" || echo "false")
+          echo "::set-output name=any::${HAS_ANY_CHANGES}"
+
+          # See if any changes were made to the app (front-end or back-end)
+          HAS_APP_CHANGES=$(echo "$FILE_CHANGES" | grep -qP 'ci.yml|yarn.lock|package.json|Dockerfile|back-end|front-end' && echo "true" || echo "false")
+          echo "::set-output name=app::${HAS_APP_CHANGES}"
+
+          # See if any changes were made to the back-end
+          HAS_BACKEND_CHANGES=$(echo "$FILE_CHANGES" | grep -qP 'ci.yml|yarn.lock|package.json|Dockerfile|back-end' && echo "true" || echo "false")
+          echo "::set-output name=backend::${HAS_BACKEND_CHANGES}"
+
+  ci:
+    runs-on: ubuntu-latest
+    needs: changes
+    if: ${{ needs.changes.outputs.any == 'true' }}
+    steps:
+      - uses: actions/checkout@v2
 
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
@@ -47,45 +76,44 @@ jobs:
           rm -rf packages/front-end/coverage
           rm -rf packages/back-end/coverage
 
-      - name: check for file changes
-        id: changes
-        run: |
-          # All changes in this push
-          FILE_CHANGES=$(git diff --name-only HEAD^ HEAD)
+  docker:
+    runs-on: ubuntu-latest
+    needs: [changes, ci]
+    if: ${{ (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')) && github.repository == 'growthbook/growthbook' && needs.changes.outputs.app == 'true' }}
+    steps:
+      - uses: actions/checkout@v2
 
-          # See if any changes were made to the back-end
-          HAS_BACKEND_CHANGES=$(echo "$FILE_CHANGES" | grep -qP 'yarn.lock|back-end' && echo "true" || echo "false")
-          echo "::set-output name=backend::${HAS_BACKEND_CHANGES}"
-
-          # See if any changes were made to the app (front-end or back-end)
-          HAS_APP_CHANGES=$(echo "$FILE_CHANGES" | grep -qP 'ci.yml|yarn.lock|package.json|Dockerfile|back-end|front-end' && echo "true" || echo "false")
-          echo "::set-output name=app::${HAS_APP_CHANGES}"
-      
       - name: Login to Docker Hub
-        if: github.ref == 'refs/heads/main' && steps.changes.outputs.app == 'true'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Build, tag, and push image to Docker Hub
-        if: github.ref == 'refs/heads/main' && steps.changes.outputs.app == 'true'
-        env:
-          IMAGE_TAG: ${{ github.sha }}
         run: |
           # Build and push the docker image
-          docker build -t growthbook/growthbook:latest -t growthbook/growthbook:$IMAGE_TAG .
-          docker push growthbook/growthbook
+          docker build -t growthbook/growthbook:latest -t growthbook/growthbook:$GITHUB_SHA .
 
+          # If this is a release, add the version tag as well
+          if [[ $GITHUB_REF = refs\/tags\/v* ]]; then
+            TAG=${GITHUB_REF#refs/tags/v}
+            docker image tag growthbook/growthbook:latest growthbook/growthbook:$TAG
+          fi
+
+          docker push -a growthbook/growthbook
+
+  prod:
+    runs-on: ubuntu-latest
+    needs: [changes, ci, docker]
+    if: ${{ github.ref == 'refs/heads/main' && github.repository == 'growthbook/growthbook' && needs.changes.outputs.backend == 'true' }}
+    steps:
       - name: Configure AWS credentials for Growth Book Cloud
-        if: github.ref == 'refs/heads/main' && steps.changes.outputs.backend == 'true'
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       
-      - name: Deploy Back-end to ECS for Growth Book Cloud
-        if: github.ref == 'refs/heads/main' && steps.changes.outputs.backend == 'true'
+      - name: Deploy docker image to ECS for Growth Book Cloud API
         run:
           aws ecs update-service --cluster prod-api --service prod-api --force-new-deployment --region us-east-1
