--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -20,6 +20,7 @@
     "async": "^3.1.0",
     "aws-sdk": "^2.696.0",
     "body-parser": "^1.19.0",
+    "clickhouse": "^2.4.0",
     "compression": "^1.7.4",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.5",
