--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.15.0",
     "dirty-json": "^0.9.2",
     "json-stringify-pretty-compact": "^3.0.0",
+    "jstat": "^1.9.3",
     "lodash": "^4.17.15",
     "markdown-it": "^11.0.0",
     "markdown-it-sanitizer": "^0.4.3",
