--- a/packages/back-end/tsconfig.json
+++ b/packages/back-end/tsconfig.json
@@ -7,7 +7,8 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "typeRoots": ["node_modules/@types", "./typings"]
   },
-  "include": ["src/**/*", "types/AuditModel.ts", "types/**/*"]
+  "include": ["src/**/*", "types/**/*", "typings/jstat/index.d.ts"]
 }
