--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 uploads
+packages/back-end/globalConfig.json
 
 # Python compiled files
 __pycache__/
