Simplify back-end typescript build process.

--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -6,8 +6,8 @@
     "build:emails": "mkdir -p dist/templates && cp -r src/templates/* dist/templates",
     "build:python": "rm -rf dist/python && mkdir -p dist/python && cp -r src/python/* dist/python",
     "build:clean": "rm -rf dist",
-    "build:typescript": "tsc && rm -rf dist/types && mv dist/src/* dist/ && rm -rf dist/src",
-    "dev": "yarn build:emails && yarn build:python && node-dev src/server.ts",
+    "build:typescript": "tsc",
+    "dev": "node-dev src/server.ts",
     "build": "yarn build:clean && yarn build:typescript && yarn build:python && yarn build:emails",
     "start": "node dist/server.js",
     "test": "jest --forceExit --coverage --verbose --detectOpenHandles",
