--- a/packages/back-end/tsconfig.spec.json
+++ b/packages/back-end/tsconfig.spec.json
@@ -7,8 +7,7 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist",
-    "typeRoots": ["node_modules/@types", "./typings"]
+    "outDir": "dist"
   },
-  "include": ["src/**/*", "types/**/*.d.ts", "typings/jstat/index.d.ts"]
+  "include": ["src/**/*", "types/**/*", "typings/jstat/index.d.ts"]
 }
