--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 uploads
+packages/back-end/globalConfig.json
+
+# Python compiled files
+__pycache__/
+*.py[cod]
+*$py.class
