--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "copy-templates": "mkdir -p dist/templates && cp -r src/templates/* dist/templates",
-    "dev": "yarn copy-templates && node-dev src/server.ts",
-    "build": "rm -rf dist && tsc && rm -rf dist/types && mv dist/src/* dist/ && rm -rf dist/src && yarn copy-templates",
+    "build:emails": "mkdir -p dist/templates && cp -r src/templates/* dist/templates",
+    "build:python": "rm -rf dist/python && mkdir -p dist/python && cp -r src/python/* dist/python",
+    "build:clean": "rm -rf dist",
+    "build:typescript": "tsc",
+    "dev": "node-dev src/server.ts",
+    "build": "yarn build:clean && yarn build:typescript && yarn build:python && yarn build:emails",
     "start": "node dist/server.js",
     "test": "jest --forceExit --coverage --verbose --detectOpenHandles",
     "type-check": "tsc --pretty --noEmit",
@@ -48,6 +51,7 @@
     "objects-to-csv": "^1.3.6",
     "pg": "^8.6.0",
     "pino-http": "^5.3.0",
+    "python-shell": "^3.0.0",
     "snowflake-promise": "^4.5.0",
     "sql-formatter": "^4.0.2",
     "stripe": "^8.106.0",
