--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@google-cloud/bigquery": "^5.5.0",
     "@slack/web-api": "^5.14.0",
+    "agenda": "^4.1.3",
     "asn1.js": "^5.4.1",
     "async": "^3.1.0",
     "aws-sdk": "^2.696.0",
