Connect to Mongo and start the queue automatically on back-end startup. Limit queue prefetch to 5 per job type for better horizontal scalability.

--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -10,7 +10,7 @@
     "dev": "node-dev src/server.ts",
     "build": "yarn build:clean && yarn build:typescript && yarn build:python && yarn build:emails",
     "start": "node dist/server.js",
-    "test": "jest --forceExit --coverage --verbose --detectOpenHandles",
+    "test": "NO_INIT=1 jest --forceExit --coverage --verbose --detectOpenHandles",
     "type-check": "tsc --pretty --noEmit",
     "generate-dummy-data": "node --stack-size=8192 ./test/data-generator/data-generator.js",
     "import-dummy-data": "node --stack-size=8192 ./test/data-generator/import.js"
