--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -91,6 +91,7 @@
     "chai": "^4.2.0",
     "jest": "^26.6.3",
     "node-dev": "^7.0.0",
+    "pino-pretty": "^5.1.0",
     "supertest": "^4.0.2",
     "ts-jest": "^26.5.6",
     "ts-node": "^10.0.0",
