--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -28,7 +28,9 @@
     "md5": "^2.3.0",
     "next": "^10.2.0",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap-typeahead": "^5.0.0-rc.3",
+    "react-colorful": "^5.3.0",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.2",
