--- a/packages/back-end/tsconfig.spec.json
+++ b/packages/back-end/tsconfig.spec.json
@@ -9,5 +9,5 @@
     "sourceMap": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*", "types/**/*", "typings/jstat/index.d.ts"]
+  "include": ["src/**/*", "types/**/*", "typings/**/*.d.ts"]
 }
