--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -54,6 +54,7 @@
     "pg": "^8.6.0",
     "pino-http": "^5.3.0",
     "pino-pretty": "^5.1.0",
+    "presto-client": "^0.11.2",
     "python-shell": "^3.0.0",
     "snowflake-promise": "^4.5.0",
     "sql-formatter": "^4.0.2",
