--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -46,6 +46,7 @@
     "md5": "^2.3.0",
     "mongodb": "^3.6.9",
     "mongoose": "^5.7.5",
+    "mysql2": "^2.3.0",
     "node-fetch": "^2.6.1",
     "node-gzip": "^1.1.2",
     "nodemailer": "^6.6.0",
