--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -39,6 +39,7 @@
     "express-jwt": "^6.0.0",
     "express-validator": "^6.2.0",
     "googleapis": "^59.0.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "jstat": "^1.9.3",
     "jwks-rsa": "^1.8.0",
@@ -59,6 +60,7 @@
     "python-shell": "^3.0.0",
     "snowflake-promise": "^4.5.0",
     "sql-formatter": "^4.0.2",
+    "string-env-interpolation": "^1.0.1",
     "stripe": "^8.106.0",
     "uniqid": "^5.3.0",
     "winston": "^3.3.3"
@@ -76,6 +78,7 @@
     "@types/express": "^4.17.1",
     "@types/express-jwt": "^0.0.42",
     "@types/jest": "^24.0.23",
+    "@types/js-yaml": "^4.0.2",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.157",
     "@types/md5": "^2.2.0",
