--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -17,8 +17,7 @@
     "next": "^10.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0",
-    "rehype-add-classes": "^1.0.0"
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.4.1",
