--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -17,7 +17,9 @@
     "next": "^10.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "rehype-slug": "^4.0.1",
+    "rehype-autolink-headings": "^5.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.4.1",
