Bug fix: UnhandledPromiseRejectionWarning on failed SQL queries

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     }
   },
   "lint-staged": {
-    "./**/*.{json,css,scss,md}": [
+    "./**/*.{json,css,scss,md,mdx}": [
       "prettier --write"
     ],
     "./**/*.{js,ts,jsx,tsx}": [
