--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -12,8 +12,12 @@
     "@auth0/auth0-spa-js": "^1.9.0",
     "@jitsu/sdk-js": "^2.2.0",
     "@jukben/emoji-search": "^2.0.1",
-    "@visx/stats": "^1.7.0",
-    "@visx/visx": "^1.10.0",
+    "@visx/axis": "^2.1.0",
+    "@visx/grid": "^2.1.0",
+    "@visx/responsive": "^2.1.0",
+    "@visx/scale": "^2.1.0",
+    "@visx/shape": "^2.1.0",
+    "@visx/stats": "^2.1.0",
     "@webscopeio/react-textarea-autocomplete": "^4.7.3",
     "back-end": "0.0.1",
     "bootstrap": "^4.5.0",
@@ -36,11 +40,10 @@
     "react-dropzone": "^11.3.2",
     "react-icons": "^4.2.0",
     "react-rangeslider": "^2.2.0",
-    "react-simple-code-editor": "^0.11.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-textarea-autosize": "^8.3.2",
-    "recharts": "^1.8.5",
-    "rich-markdown-editor": "^11.4.0-0",
+    "recharts": "^2.1.0",
+    "rich-markdown-editor": "^11.17.2",
     "spectacle": "^8.3.0",
     "swr": "^0.5.4"
   },
@@ -55,7 +58,6 @@
     "@types/react-datepicker": "^3.1.1",
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/react-textarea-autosize": "^4.3.5",
-    "@types/recharts": "^1.8.12",
     "sass": "^1.26.5",
     "typescript": "^4.2.4"
   },
