--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -20,6 +20,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.15.0",
     "dirty-json": "^0.9.2",
+    "js-yaml": "^4.1.0",
     "json-stringify-pretty-compact": "^3.0.0",
     "jstat": "^1.9.3",
     "lodash": "^4.17.15",
