Use visx instead of recharts for all graphs. Remove old pages and components.

--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -13,6 +13,7 @@
     "@jitsu/sdk-js": "^2.2.0",
     "@jukben/emoji-search": "^2.0.1",
     "@visx/axis": "^2.1.0",
+    "@visx/curve": "^2.1.0",
     "@visx/grid": "^2.1.0",
     "@visx/responsive": "^2.1.0",
     "@visx/scale": "^2.1.0",
@@ -36,14 +37,11 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap-typeahead": "^5.0.0-rc.3",
     "react-colorful": "^5.3.0",
-    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.2",
     "react-icons": "^4.2.0",
-    "react-rangeslider": "^2.2.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-textarea-autosize": "^8.3.2",
-    "recharts": "^2.1.0",
     "rich-markdown-editor": "^11.17.2",
     "spectacle": "^8.3.0",
     "swr": "^0.5.4"
@@ -56,7 +54,6 @@
     "@types/prismjs": "^1.16.1",
     "@types/react": "^16.9.55",
     "@types/react-bootstrap-typeahead": "^3.4.6",
-    "@types/react-datepicker": "^3.1.1",
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/react-textarea-autosize": "^4.3.5",
     "sass": "^1.26.5",
