--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -27,7 +27,6 @@
     "body-parser": "^1.19.0",
     "clickhouse": "^2.4.0",
     "compression": "^1.7.4",
-    "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
@@ -37,7 +36,6 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-jwt": "^6.0.0",
-    "express-validator": "^6.2.0",
     "googleapis": "^59.0.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -49,10 +47,8 @@
     "mongoose": "^5.13.7",
     "mysql2": "^2.3.0",
     "node-fetch": "^2.6.1",
-    "node-gzip": "^1.1.2",
     "nodemailer": "^6.6.0",
     "nunjucks": "^3.2.3",
-    "objects-to-csv": "^1.3.6",
     "pg": "^8.6.0",
     "pino-http": "^5.3.0",
     "pino-pretty": "^5.1.0",
@@ -62,14 +58,12 @@
     "sql-formatter": "^4.0.2",
     "string-env-interpolation": "^1.0.1",
     "stripe": "^8.106.0",
-    "uniqid": "^5.3.0",
-    "winston": "^3.3.3"
+    "uniqid": "^5.3.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.5",
     "@types/async": "^3.0.2",
     "@types/body-parser": "^1.17.1",
-    "@types/chai": "^4.2.3",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
@@ -84,7 +78,6 @@
     "@types/md5": "^2.2.0",
     "@types/node": "^14.0.0",
     "@types/node-fetch": "^2.5.8",
-    "@types/node-gzip": "^1.1.0",
     "@types/nodemailer": "^6.4.1",
     "@types/nunjucks": "^3.1.4",
     "@types/pg": "^7.14.4",
@@ -94,9 +87,9 @@
     "@types/sql-formatter": "^2.3.0",
     "@types/supertest": "^2.0.9",
     "@types/uniqid": "^5.2.0",
-    "chai": "^4.2.0",
     "jest": "^26.6.3",
     "node-dev": "^7.0.0",
+    "objects-to-csv": "^1.3.6",
     "supertest": "^4.0.2",
     "ts-jest": "^26.5.6",
     "ts-node": "^10.0.0",
