--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -52,8 +52,9 @@
     "@types/md5": "^2.2.0",
     "@types/node": "^14.0.5",
     "@types/prismjs": "^1.16.1",
-    "@types/react": "^16.9.55",
+    "@types/react": "^17.0.19",
     "@types/react-bootstrap-typeahead": "^3.4.6",
+    "@types/react-dom": "^17.0.9",
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/react-textarea-autosize": "^4.3.5",
     "sass": "^1.26.5",
