--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -39,6 +39,7 @@
     "react-colorful": "^5.3.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.2",
+    "react-hook-form": "^7.15.0",
     "react-icons": "^4.2.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-textarea-autosize": "^8.3.2",
