--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -39,6 +39,7 @@
     "react-colorful": "^5.3.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.2",
+    "react-hook-form": "^7.15.0",
     "react-icons": "^4.2.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-textarea-autosize": "^8.3.2",
@@ -58,7 +59,7 @@
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/react-textarea-autosize": "^4.3.5",
     "sass": "^1.26.5",
-    "typescript": "^4.2.4"
+    "typescript": "^4.4.2"
   },
   "license": "MIT"
 }
