--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -19,6 +19,7 @@
     "@visx/scale": "^2.1.0",
     "@visx/shape": "^2.1.0",
     "@visx/stats": "^2.1.0",
+    "@visx/tooltip": "^2.1.0",
     "@webscopeio/react-textarea-autocomplete": "^4.7.3",
     "back-end": "0.0.1",
     "bootstrap": "^4.5.0",
