--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -10,7 +10,7 @@
     "dev": "node-dev src/server.ts",
     "build": "yarn build:clean && yarn build:typescript && yarn build:python && yarn build:emails",
     "start": "node dist/server.js",
-    "test:node": "NO_INIT=1 jest --forceExit --coverage --verbose --detectOpenHandles",
+    "test:node": "jest --forceExit --verbose --detectOpenHandles",
     "test:python": "cd src/python && python3 -m unittest discover",
     "test": "yarn test:python && yarn test:node",
     "type-check": "tsc --pretty --noEmit",
@@ -61,7 +61,6 @@
     "uniqid": "^5.3.0"
   },
   "devDependencies": {
-    "@shelf/jest-mongodb": "^1.2.5",
     "@types/async": "^3.0.2",
     "@types/body-parser": "^1.17.1",
     "@types/compression": "^1.7.0",
@@ -85,12 +84,10 @@
     "@types/request": "^2.48.3",
     "@types/request-promise": "^4.1.44",
     "@types/sql-formatter": "^2.3.0",
-    "@types/supertest": "^2.0.9",
     "@types/uniqid": "^5.2.0",
     "jest": "^27.1.1",
     "node-dev": "^7.0.0",
     "objects-to-csv": "^1.3.6",
-    "supertest": "^4.0.2",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.0.0",
     "typescript": "^4.4.2"
