Fix tests and types for sdks

--- a/packages/sdk-js/tsconfig.json
+++ b/packages/sdk-js/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "dist/types",
     "declaration": true,
     "declarationMap": true,
-    "strict": true
+    "strict": true,
+    "esModuleInterop": true
   },
   "include": ["./src/index.ts"]
 }
