--- a/packages/sdk-js/package.json
+++ b/packages/sdk-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@growthbook/js",
+  "name": "@growthbook/growthbook",
   "version": "0.13.0",
   "license": "MIT",
   "main": "dist/cjs/index.js",
